@startuml
title FileServer Data Model

class fs_user {
	**id : Number**
	name : String
	certificate : Binary
}

class file {
	**virtual_path : String**
	path : String
	name : String
	content_type : String
	md5_checksum : String
	sha256_checksum : String
	time_stamp : DateTime
	start_date : DateTime
	end_date : DateTime
	**user_id** : Number
	length : Number
	state : FileState
	FOREIGN KEY (user_id) REFERENCES fs_user(id)
}

enum FileState {
  COMPLETE[0]
  PARTIAL[1]
}

' fs_user::id ||--o{ file::user_id
fs_user ||--o{ file
file::state -right- FileState

hide empty members
hide methods

@enduml